--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,16 @@
                  <artifactId>maven-plugin-api</artifactId>
                  <version>3.0</version>
              </dependency>
+             <dependency>
+                 <groupId>org.mockito</groupId>
+                 <artifactId>mockito-core</artifactId>
+                 <version>1.9.0</version>
+             </dependency>
+             <dependency>
+                 <groupId>org.assertj</groupId>
+                 <artifactId>assertj-core</artifactId>
+                 <version>2.5.0</version>
+             </dependency>
          </dependencies>
      </dependencyManagement>
 
